# ESP32P4DOOM

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
components/doomgeneric/: CMakeLists.txt  doomgeneric_esp32p4.c
components/doomgeneric/doomgeneric/: i_sound.c  m_config.c  m_misc.c
main/: CMakeLists.txt  bsp_p4_eval.c  bsp_p4_eval.h  doomEsp.c  doomEsp.h  doomEsp_sound.c  doomEsp_sound.h  doomEsp_touch.c  doomEsp_touch.h  idf_component.yml  main.c
